--- a/src/web/styles/app.css
+++ b/src/web/styles/app.css
@@ -1,4 +1,16 @@
 
-.centered-form {
-
+.mt-1 {
+  margin-top: 10px;
+}
+.mt-2 {
+  margin-top: 20px;
+}
+.mt-3 {
+  margin-top: 30px;
+}
+.mt-4 {
+  margin-top: 40px;
+}
+.mt-5 {
+  margin-top: 50px;
 }
