--- a/src/web/styles/app.css
+++ b/src/web/styles/app.css
@@ -17,3 +17,23 @@
 .vertical-divider {
   border-right: 1px solid lightgray;
 }
+
+.thumbnail-view {
+  position : relative;
+  margin : 5px;
+  width: 105px;
+  height: 105px;
+  border-radius: 5px;
+  border-width: 1px;
+  border-color: lightgray;
+  border-style: solid;
+}
+
+.thumbnail-remove {
+  position : absolute;
+  border-width: 4px;
+  border-color: white;
+  border-style: solid;
+  right:2px;
+  top:2px;
+}
