--- a/src/web/styles/app.css
+++ b/src/web/styles/app.css
@@ -14,6 +14,23 @@
 .mt-5 {
   margin-top: 50px;
 }
+
+.ml-1 {
+  margin-left: 10px;
+}
+.ml-2 {
+  margin-left: 20px;
+}
+.ml-3 {
+  margin-left: 30px;
+}
+.ml-4 {
+  margin-left: 40px;
+}
+.ml-5 {
+  margin-left: 50px;
+}
+
 .vertical-divider {
   border-right: 1px solid lightgray;
 }
