--- a/src/web/styles/app.css
+++ b/src/web/styles/app.css
@@ -15,6 +15,22 @@
   margin-top: 50px;
 }
 
+.mb-1 {
+  margin-bottom: 10px;
+}
+.mb-2 {
+  margin-bottom: 20px;
+}
+.mb-3 {
+  margin-bottom: 30px;
+}
+.mb-4 {
+  margin-bottom: 40px;
+}
+.mb-5 {
+  margin-bottom: 50px;
+}
+
 .ml-1 {
   margin-left: 10px;
 }
