--- a/src/web/styles/app.css
+++ b/src/web/styles/app.css
@@ -47,6 +47,22 @@
   margin-left: 50px;
 }
 
+.mr-1 {
+  margin-left: 10px;
+}
+.mr-2 {
+  margin-left: 20px;
+}
+.mr-3 {
+  margin-left: 30px;
+}
+.mr-4 {
+  margin-left: 40px;
+}
+.mr-5 {
+  margin-left: 50px;
+}
+
 .vertical-divider {
   border-right: 1px solid lightgray;
 }
